--- a/keepassxc-browser/popups/popup.css
+++ b/keepassxc-browser/popups/popup.css
@@ -46,6 +46,12 @@ body {
     font-size: 80%;
     color: #787878;
 }
+#list {
+    padding-left: 0px;
+}
+#child {
+    border-top: 0px;
+}
 #update-available {
     padding-top: 10px;
     margin-top: 10px;
@@ -64,9 +70,24 @@ body {
 }
 #login-filter {
 	outline:none;
-	border-radius: 4px 0 0 4px;
+	border-radius: 4px;
 	border: 1px solid #ccc;
 	margin-bottom: 5px;
 	padding: 2px 10px;
 	width: 100%;
+}
+.credentials .groups {
+    display: none;
+    border-top: 1px solid #333;
+}
+.connected-database {
+    display: none;
+    font-size: 85%;
+    color: #787878;
+}
+.credentials .username-new {
+    display: none;
+}
+.credentials .username-exists {
+    display: none;
 }
