Choose custom login fields can be operated from keyboard

--- a/keepassxc-browser/keepassxc-browser.css
+++ b/keepassxc-browser/keepassxc-browser.css
@@ -171,6 +171,7 @@ input.genpw-text {
 .b2c-fixed-field {
     position: absolute;
     border: 2px solid #efefef;
+    color: #fff;
     cursor: pointer;
     z-index: 2147483646;
     text-align: left;
