Choose custom logins fixes

--- a/keepassxc-browser/css/define.css
+++ b/keepassxc-browser/css/define.css
@@ -35,6 +35,7 @@
     cursor: pointer;
     background-color: rgba(255,255,255,0.3);
     font-size: 15px;
+    user-select: none;
 }
 
 #kpxcDefine-description div:first-of-type {
