--- a/keepassxc-browser/options/options.css
+++ b/keepassxc-browser/options/options.css
@@ -46,7 +46,8 @@ input:invalid {
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-    color: #cccccc;
+    color: #ffffff;
+    background-color: #5f9f40;
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
