Final changes before review

--- a/keepassxc-browser/keepassxc-browser.css
+++ b/keepassxc-browser/keepassxc-browser.css
@@ -168,6 +168,21 @@ input.genpw-text {
     margin-bottom: 3px;
 }
 
+#b2c-keyboardHelp {
+    font-size: 0.75rem;
+}
+
+#b2c-keyboardHelp kbd {
+    background-color: #eee;
+    border-radius: 3px;
+    border: 1px solid #b4b4b4;
+    color: #333;
+    display: inline-block;
+    line-height: 1;
+    padding: 2px 4px;
+    white-space: nowrap;
+}
+
 .b2c-fixed-field {
     position: absolute;
     border: 2px solid #efefef;
