--- a/keepassxc-browser/keepassxc-browser.css
+++ b/keepassxc-browser/keepassxc-browser.css
@@ -117,15 +117,15 @@ input.genpw-text {
 }
 
 .b2c-modal-backdrop:after {
-    content:'';
+    content: '';
     position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
     background-color: #000000;
-    opacity: 0.8;
-    filter: alpha(opacity=80);
+    opacity: 0.5;
+    filter: alpha(opacity=50);
 }
 
 #b2c-cipDefine-fields {
@@ -142,7 +142,7 @@ input.genpw-text {
     left: 150px;
     text-align: left;
     cursor: pointer;
-    background-color:rgba(255,255,255,0.3);
+    background-color: rgba(0,0,0,0.8);
     font-size: 15px;
 }
 
@@ -169,7 +169,7 @@ input.genpw-text {
 }
 
 #b2c-keyboardHelp {
-    font-size: 0.75rem;
+    font-size: 0.75em;
 }
 
 #b2c-keyboardHelp kbd {
@@ -189,7 +189,7 @@ input.genpw-text {
     color: #fff;
     cursor: pointer;
     z-index: 2147483646;
-    text-align: left;
+    text-align: center;
     font-weight: bold;
     background-color:rgba(239,239,239,0.4);
 }
